--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,9 +39,13 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        
       - name: Build
-
         run: npm run build
+
+      - name: Copy index.html to 404.html for SPA routing
+        run: cp dist/index.html dist/404.html
+        
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
